Remove things from backend / add frontend study

--- a/springboot-adb-react/workshops/freetier/manifest.json
+++ b/springboot-adb-react/workshops/freetier/manifest.json
@@ -21,7 +21,7 @@
             "filename": "../../backend/backend.md"
         },
         {
-            "title": "Lab 3: Frontend (React JS)",
+            "title": "Lab 3: Frontend (Study/Optional)",
             "filename": "../../frontend/frontend.md"
         },
         {
