--- a/ajd-soda/workshops/withmongoapi/manifest.json
+++ b/ajd-soda/workshops/withmongoapi/manifest.json
@@ -8,7 +8,7 @@
         },
           {
             "title": "Getting Started",
-             "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/common/labs/cloud-login/pre-register-free-tier-account.md"
+             "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
           },
           {
             "title": "Lab 1: Infrastructure Configuration",
@@ -33,7 +33,7 @@
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://raw.githubusercontent.com/oracle/learning-library/master/common/labs/need-help/need-help-freetier.md"
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
         }
     ]
 }
