--- a/rest-services-for-adb-appDevLive/workshops/livelabs2/manifest.json
+++ b/rest-services-for-adb-appDevLive/workshops/livelabs2/manifest.json
@@ -9,7 +9,7 @@
         },
         {
             "title": "Getting Started",
-            "description": "Login to Oracle Cloud",
+            "description": "Login to Oracle Cloud Infrastructure",
             "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs2.md"
         },
         {
@@ -23,22 +23,22 @@
             "filename": "https://oracle-livelabs.github.io/common/labs/sqldevweb-login/sqldevweb-login.md"
         },
         {
-            "title": "Lab 3: Connect to your Autonomous Database using Database Actions/SQL Developer Web",
-            "description": "Connect to your Autonomous Database using Database Actions/SQL Developer Web",
+            "title": "Lab 3: Create and Auto-REST enable a table",
+            "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "https://oracle-livelabs.github.io/common/labs/sqldevweb-login/sqldevweb-login.md"
         },
         {
-            "title": "Lab 4: Create and Auto-REST enable a table",
+            "title": "Lab 4: Load data into a table then create business logic for the database",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../create-table/create-table.md"
         },
         {
-            "title": "Lab 5: Load data and create business logic in the database",
+            "title": "Lab 5: REST enable tables and add business logic",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../load-data-and-biz-objs/load-data-and-biz-objs.md"
         },
         {
-            "title": "Lab 6: REST enable tables and business logic",
+            "title": "Lab 6: Secure REST-enabled endpoints",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../rest-enable-objects/rest-enable-objects.md"
         },
@@ -48,7 +48,7 @@
             "filename": "../../secure-endpoints/secure-endpoints.md"
         },
         {
-            "title": "Terminate your Always Free Autonomous Database",
+            "title": "Retire your Always Free Autonomous Database",
             "description": "Terminate your Always Free Autonomous Database",
             "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
