--- a/rest-services-for-adb-appDevLive/workshops/odbw-livelabs/manifest.json
+++ b/rest-services-for-adb-appDevLive/workshops/odbw-livelabs/manifest.json
@@ -9,7 +9,8 @@
             "filename": "../../intro/intro.md"
         },
         {
-            "title": "Login to Oracle Cloud",
+            "title": "Getting Started",
+            "description": "Login to Oracle Cloud Infrastructure",
             "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs.md"
         },
         {
@@ -18,7 +19,7 @@
             "filename": "https://oracle-livelabs.github.io/adb/shared/adb-provision/adb-provision.md"
         },
         {
-            "title": "Lab 2: Connect to ADB",
+            "title": "Lab 2: Connect to an Autonomous Database",
             "description": "Connect to an Autonomous Database with SQL Developer Web",
             "filename": "https://oracle-livelabs.github.io/common/labs/sqldevweb-login/sqldevweb-login.md"
         },
@@ -28,22 +29,22 @@
             "filename": "../../create-table/create-table.md"
         },
         {
-            "title": "Lab 4: Load data and create business logic in the database",
+            "title": "Lab 4: Load data into a table then create business logic for the database",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../load-data-and-biz-objs/load-data-and-biz-objs.md"
         },
         {
-            "title": "Lab 5: REST enable tables and business logic",
+            "title": "Lab 5: REST enable tables and add business logic",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../rest-enable-objects/rest-enable-objects.md"
         },
         {
-            "title": "Lab 6: Securing the REST endpoints",
+            "title": "Lab 6: Secure REST-enabled endpoints",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../secure-endpoints/secure-endpoints.md"
         },
         {
-            "title": "Terminate your Always Free Autonomous Database",
+            "title": "Retire your Always Free Autonomous Database",
             "description": "Terminate your Always Free Autonomous Database",
             "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },        
