--- a/rest-services-for-adb-appdevlive/workshops/odbw-freetier/manifest.json
+++ b/rest-services-for-adb-appdevlive/workshops/odbw-freetier/manifest.json
@@ -9,7 +9,7 @@
               "filename": "../../intro/intro.md"
           },
           {
-              "title": "Getting Started",
+              "title": "Get Started",
               "description": "Obtain an Always Free tier Oracle Cloud Infrastructure account",
               "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
           },
@@ -49,7 +49,7 @@
               "filename": "../../secure-endpoints/secure-endpoints.md"
           },
           {
-            "title": "Retire your Always Free Autonomous Database",
+            "title": "Clean up your Always Free Autonomous Database",
             "description": "Terminate your Always Free Autonomous Database",
               "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
           },
