Adding new Lab -  Site-to-Site VPN (#3)
* fixed comments

* resolved feedback

* fixed feedback

* corrected minor issues

* fixed json-parser bash script

added validation for wrong input

* corrections done for self qa

* correct content flow

--- a/java-management-oci-services-integration/workshops/freetier/manifest.json
+++ b/java-management-oci-services-integration/workshops/freetier/manifest.json
@@ -22,6 +22,10 @@
       "filename": "../../access-and-utilise-rest-api-via-jms-sdk-postman/access-and-utilise-rest-api-via-jms-sdk-postman.md"
     },
     {
+      "title": "Lab 3: Set up Site-to-Site VPN",
+      "filename": "../../setup-site-to-site-vpn/setup-site-to-site-vpn.md"
+    },
+    {
       "title": "Need Help?",
       "description": "Solutions to Common Problems and Directions for Receiving Live Help",
       "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
