modified the manifest

--- a/oci-devops-cicd-canary-oke/workshops/freetier/manifest.json
+++ b/oci-devops-cicd-canary-oke/workshops/freetier/manifest.json
@@ -3,9 +3,14 @@
   "help": "dex_dlc_sa_ww_grp@oracle.com",
   "tutorials": [
     {
-      "title": "Get Started with OCI devops deployment with Canary mode",
+      "title": "Introduction",
       "description": "Introduction to the lab with OCI devops ",
       "filename": "https://oracle-livelabs.github.io/developer/oci-devops-cicd-functions/intro/intro.md"
+    },
+    {
+      "title": "Get Started",
+      "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+      "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
     },
     {
       "title": "Lab 1: Provision the infrastructure",
