--- a/rest-services-for-adb-appdevlive/workshops/tenancy/manifest.json
+++ b/rest-services-for-adb-appdevlive/workshops/tenancy/manifest.json
@@ -43,7 +43,7 @@
             "filename": "../../secure-endpoints/secure-endpoints.md"
         },
         {
-            "title": "Clean up your Always Free Autonomous Database",
+            "title": "Lab 7: Clean up your Always Free Autonomous Database",
             "description": "Terminate your Always Free Autonomous Database",
             "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
