--- a/redwood-extensions/workshops/desktop/manifest.json
+++ b/redwood-extensions/workshops/desktop/manifest.json
@@ -10,14 +10,14 @@
       "filename": "../../introduction/introduction.md"
     },
     {
-      "title": "Get Started with noVNC Remote Desktop",
-      "description": "Using noVNC Remote Desktop",
-      "filename": "https://oracle-livelabs.github.io/common/labs/remote-desktop/using-novnc-remote-desktop.md"
+      "title": "Working with Projects and Workspaces",
+      "description": "Use Workspaces to create new Application Extension in your project",
+      "filename": "../../workspace/workspace.md"
     },
     {
-      "title": "Lab 1: Provision an Instance",
+      "title": "Creating your first page",
       "description": "Labs that follow the introduction are numbered, starting with Lab 1",
-      "filename": "../../provision/provision.md"
+      "filename": "../../welcome/welcome.md"
     },
     {
       "title": "Lab 2: Setup the Environment",
