--- a/redwood-extensions/workshops/desktop/manifest.json
+++ b/redwood-extensions/workshops/desktop/manifest.json
@@ -32,8 +32,8 @@
       "filename": "../../tableedit/tableedit.md"
     },
     {
-        "title": "Lab 5: Tables in LiveLabs",
-        "filename": "../../tables/tables.md"
+        "title": "Applying Redwood Page Templates",
+        "filename": "../../rweditpage/rweditpage.md"
     },
     {
             "title": "Lab 6: Variables in LiveLabs",
