Change title to OCW title

--- a/ajd-soda/workshops/withmongoapi/manifest.json
+++ b/ajd-soda/workshops/withmongoapi/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "MongoDB Developers Full Python App Development with Autonomous JSON",
+    "workshoptitle": "Full Python App Development with Autonomous JSON for MongoDB Developers",
     "tutorials": [
                 {
             "title": "Introduction",
