--- a/python-flask-web-application-with-ords-apis/workshop/workshops/ocw-tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/ocw-tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "The Title of the Workshop is Defined in the Manifest File",
+    "workshoptitle": "Develop Python Web Apps with Oracle Autonomous Database Low-code REST APIs",
     "include": {"starter-file.sql":"../../data-load/files/starter-file.sql",
                 "sample.json":"../../data-load/files/sample.json",
                 "step2.md":"../../data-load/files/step2.md"},
