--- a/orcl-blockchain-platform/workshops/desktop/manifest.json
+++ b/orcl-blockchain-platform/workshops/desktop/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "The Title of the Workshop is defined in the manifest",
+  "workshoptitle": "Oracle Blockchain Platform - Car Marketplace",
   "help": "livelabs-help-**enterarea**_us@oracle.com",
   "tutorials": [
     {
@@ -8,29 +8,38 @@
       "filename": "../../introduction/introduction.md"
     },
     {
-      "title": "Get Started with noVNC Remote Desktop",
-      "description": "Using noVNC Remote Desktop",
-      "filename": "https://oracle-livelabs.github.io/common/labs/remote-desktop/using-novnc-remote-desktop.md"
+      "title": "Environment Setup",
+      "description": "Verify Setup of compute instance",
+      "filename": "https://oracle-livelabs.github.io/common/labs/verify-compute/verify-compute-ssh-and-novnc.md"
     },
     {
-      "title": "Lab 1: Initialize Environment",
+      "title": "Initialize Environment",
       "description": "Initialize Environment",
       "filename": "../../initialize-environment/initialize-environment.md"
     },
     {
-      "title": "Lab 2: Provision an Instance",
-      "description": "Provisioning the Lab Environment",
-      "filename": "../../provision/provision.md"
+      "title": "Lab 1: OBP Environment Setup",
+      "description": "OBP Environment Setup",
+      "publisheddate": "3/24/2020",
+      "filename": "../../1-labs-obp-env-setup/obp-console.md"
     },
     {
-      "title": "Lab 3: Load Data into an Instance",
-      "description": "Loading the data",
-      "filename": "../../data-load/data-load.md"
+      "title": "Lab 2: OBP App Builder",
+      "description": "OBP App Builder",
+      "publisheddate": "3/24/2020",
+      "filename": "../../2-labs-obp-appbuilder/obp-appbuilder.md"
     },
     {
-      "title": "Lab 4: Query Data",
-      "description": "Queyring the data",
-      "filename": "../../query/query.md"
+      "title": "Lab 4: OBP - API Gateway",
+      "description": "AOBP - API Gateway",
+      "publisheddate": "4/05/2020",
+      "filename": "../../3-labs-obp-apigateway/obp-apigateway.md"
+    },
+    {
+      "title": "Lab 5: OBP - Application (Apex)",
+      "description": "OBP - Application (Apex)",
+      "publisheddate": "4/05/2020",
+      "filename": "../../4-labs-obp-application/obp-marketplace-apex.md"
     },
     {
       "title": "Need Help?",
