--- a/orcl-blockchain-platform/workshops/desktop/manifest.json
+++ b/orcl-blockchain-platform/workshops/desktop/manifest.json
@@ -42,8 +42,8 @@
       "filename": "../../4-labs-obp-application/obp-apex-application.md"
     },
     {
-      "title": "Lab 4: Trading Cars using Tokens in Car Marketplace",
-      "description": "OBP - Application (Apex)",
+      "title": "Lab 5: Trading Cars using Tokens in Car Marketplace",
+      "description": "Lab 5: Trading Cars using Tokens in Car Marketplace",
       "publisheddate": "4/05/2020",
       "filename": "../../4-labs-obp-application/obp-apex-application-tokenXchange.md"
     },
