--- a/orcl-blockchain-platform/workshops/sandbox/manifest.json
+++ b/orcl-blockchain-platform/workshops/sandbox/manifest.json
@@ -36,10 +36,16 @@
       "filename": "../../3-labs-obp-apigateway/obp-apigateway.md"
     },
     {
-      "title": "Lab 5: OBP - Application (Apex)",
-      "description": "OBP - Application (Apex)",
+      "title": "Lab 4: Building Car Marketplace application using APEX",
+      "description": "Building Car Marketplace application using APEX",
       "publisheddate": "4/05/2020",
       "filename": "../../4-labs-obp-application/obp-apex-application.md"
+    },
+    {
+      "title": "Lab 5: Trading Cars using Tokens in Car Marketplace",
+      "description": "Lab 5: Trading Cars using Tokens in Car Marketplace",
+      "publisheddate": "4/05/2020",
+      "filename": "../../4-labs-obp-application/obp-apex-application-tokenXchange.md"
     },
     {
       "title": "Need Help?",
