--- a/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
@@ -20,37 +20,38 @@
         {
             "title": "Lab 1: Walk-through of Flask application and Oracle REST APIs",
             "description": "This Lab will open the Flask application and step through, while also discussing Oracle REST API capabilities",
-            "filename": "../../workshop/application-oracle-rest-api-walkthrough/application-oracle-rest-api-walkthrough.md"
+            "filename": "../../application-oracle-rest-api-walkthrough/application-oracle-rest-api-walkthrough.md"
         },
         {
             "title": "Lab 2: Oracle REST API deeper dive",
             "description": "We review Oracle REST APIs in this Workshop in a Swagger Editor session.",
-            "filename": "../../workshop/oracle-rest-api-deep-dive/oracle-rest-api-deep-dive.md"
+            "filename": "../../oracle-rest-api-deep-dive/oracle-rest-api-deep-dive.md"
         },
         {
             "title": "Lab 3: Understanding the Python and Oracle REST API relationship",
             "description": "We review the Python application and its relationship with the provided Oracle REST APIs",
-            "filename": "../../workshop/understanding-python-and-oracle-rest-api-relationship/understanding-python-and-oracle-rest-api-relationship.md"
+            "filename": "../../python-and-oracle-rest-api-relationship/python-and-oracle-rest-api-relationship.md"
         },
         {
             "title": "Lab 4: A Bootstrap and JavaScript primer",
             "description": "We review the Bootstrap and JavaScript that is included in this Flask application.",
-            "filename": "../../workshop/bootstrap-and-javascript-primer/bootstrap-and-javascript-primer.md"
+            "filename": "../../bootstrap-and-javascript-primer/bootstrap-and-javascript-primer.md"
         },
         {
-            "title": "Lab 5: Securing your Oracle REST APIs with the OAuth 2.0 security protocol",
+            "title": "A word on security",
             "description": "We introduce the concept of the OAuth2 2.0 security protocol, and how it can benefit our Flask application.",
-            "filename": "../../workshop/securing-oracle-rest-apis/securing-oracle-rest-apis.md"
+            "filename": "../../securing-oracle-rest-apis/securing-oracle-rest-apis.md"
         },
         {
             "title": "Other LiveLabs you might like",
             "description": "Other LiveLabs you might like",
             "filename": "../../other-livelabs/other-livelabs.md"
-        }
+        },
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
             "filename":"https://oracle-livelabs.github.io/common//labs/need-help/need-help-freetier.md"
-        },
+        }
+    
                 ]
-}
+} 
