--- a/python-and-database-scripting/workshops/livelabs/manifest.json
+++ b/python-and-database-scripting/workshops/livelabs/manifest.json
@@ -1,31 +1,96 @@
 {
-  "workshoptitle": "Python and Oracle for Developers",
-  "help": "livelabs-help-db_us@oracle.com",
+    "workshoptitle": "Python and Oracle for Developers",
+    "help": "livelabs-help-db_us@oracle.com",
     "tutorials": [
         {
-            "title": "Getting Started",
-            "description": "Prerequisites for LiveLabs (Oracle-owned tenancies).",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs2.md"
-        },
-        {
             "title": "Introduction",
-            "description": "Introduction to the Python and Database scripting workshop",
+            "description": "Introduction to the Python and Database scripting workshop.",
             "filename": "../../intro/intro.md"
         },
         {
-            "title": "Lab 1: Verify LiveLabs Setup",
-            "description": "Verify LiveLabs Setup",
-            "filename": "https://oracle-livelabs.github.io/common/labs/setup-compute/verify-setup-19c-livelabs.md"
+            "title": "Getting Started",
+            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable).",
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/event-register-free-tier-account.md"
         },
         {
-            "title": "Lab 2: Python and Oracle Database: Scripting for the Future",
-            "description": "Use Python and the Oracle Database",
-            "filename": "../../python-scripting/python-scripting.md"
+            "title": "Lab 1: Create Autonomous Database Instance",
+            "description": "Create Autonomous Database Instance",
+            "filename": "../../Lab1-adb/adb.md"
+        },
+        {
+            "title": "Lab 2: Environment Setup",
+            "description": "Install python-oracledb driver and test connection to the Autonomous Database",
+            "filename": "../../Lab2-env-setup/env-setup.md"
+        },
+        {
+            "title": "Lab 3: Connection Pools",
+            "description": "Use python-oracledb connection pools to connect to the Oracle Database",
+            "filename": "../../Lab3-connection-pool/conn-pool.md"
+        },
+        {
+            "title": "Lab 4: Fetching Data",
+            "description": "Use python-oracledb connection pools to fetch data from the Oracle Database",
+            "filename": "../../Lab4-data-fetching/data-fetch.md"
+        },
+        {
+            "title": "Lab 5: Binding Data",
+            "description": "Use python-oracledb to bind data from the Oracle Database",
+            "filename": "../../Lab5-binding-data/binding-data.md"
+        },
+        {
+            "title": "Lab 6: PL/SQL",
+            "description": "Use PL/SQL procedures and functions to access data stored in Oracle databases",
+            "filename": "../../Lab6-plsql/plsql.md"
+        },
+        {
+            "title": "Lab 7: Type Handlers",
+            "description": "Use type handlers to alter data fetched or sent to the Oracle database using the python-oracledb to ......",
+            "filename": "../../Lab7-type-handlers/type-handlers.md"
+        },
+        {
+            "title": "Lab 8: LOBS",
+            "description": "Use python-oracledb to manipulate LOBs in Oracle databases",
+            "filename": "../../Lab8-lobs/lobs.md"
+        },
+        {
+            "title": "Lab 9: Rowfactory Functions",
+            "description": "Use python-oracledb to enable queries to return objects other than tuples",
+            "filename": "../../Lab9-rowfactory-functions/func.md"
+        },
+        {
+            "title": "Lab 10: Subclassing Connections and Cursors",
+            "description": "Use subclassing for hooking connection and cursor creation with python-oracledb",
+            "filename": "../../Lab10-con-and-cursors/con-and-cursors.md"
+        },
+        {
+            "title": "Lab 11: Thick Mode",
+            "description": "Use python-oracledb thick-mode for accessing advanced Oracle database functionality",
+            "filename": "../../Lab11-thick-mode/thick.md"
+        },
+        {
+            "title": "Lab 12: Advanced Queueing",
+            "description": "Use advanced queueing APIs usable in python-oracledb thick mode allow messages to be passed between applications",
+            "filename": "../../Lab12-advanced-queueing/queue.md"
+        },
+        {
+            "title": "Lab 13: Scrollable Cursors",
+            "description": "Use python-oracledb thick mode applications to move backwards as well as forwards in query results",
+            "filename": "../../Lab13-scrollable-cursors/cursor.md"
+        },
+        {
+            "title": "Lab 14: Simple Oracle Document Access (SODA)",
+            "description": "Use SODA to retrieve, insert and query documents from Oracle databases",
+            "filename": "../../Lab14-SODA/soda.md"
+        },
+        {
+            "title": "Lab 15: Terminate Oracle Autonomous Database",
+            "description": "Terminating an Oracle Autonomous Database permanently",
+            "filename":"https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
         }
     ]
 }
