--- a/redwood-extensions/workshops/sandbox/manifest.json
+++ b/redwood-extensions/workshops/sandbox/manifest.json
@@ -20,11 +20,11 @@
             "filename": "../../provision/provision.md"
         },
         {
-            "title": "Lab 2: Setup the Environment",
+            "title": "Lab 2: Set Up the Environment",
             "filename": "../../setup/setup.md"
         },
         {
-            "title": "Lab 3: Load Data into an Instance",
+            "title": "Lab 3: Load Data Into an Instance",
             "filename": "../../data-load/data-load.md"
         },
         {
