--- a/java-management/workshops/sandbox/manifest.json
+++ b/java-management/workshops/sandbox/manifest.json
@@ -2,7 +2,7 @@
     "workshoptitle": "Get Started with Oracle Cloud Infrastructure Java Management Service",
     "include": {
     },
-    "help": "esther.neoh.hui.lin@oracle.com",
+    "help": "autonomous_java-dev_us_grp@oracle.com",
     "tutorials": [
         {
             "title": "Introduction",
