--- a/python-flask-web-application-with-ords-apis/workshop/workshops/ocw-tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/ocw-tenancy/manifest.json
@@ -12,6 +12,11 @@
             "description": "Introduction for this workshop; provides a brief overview of what to expect.",
             "filename": "../../introduction/workshop-introduction.md"
         },
+        {
+            "title": "Get Started with Oracle Cloud",
+            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+            "filename": "https://oracle-livelabs.github.io/common//labs/cloud-login/cloud-login.md"
+        },
              {
             "title": "Lab 1: Walk-through of Flask application and Oracle REST APIs",
             "description": "This Lab will open the Flask application and step through, while also discussing Oracle REST API capabilities",
@@ -42,15 +47,10 @@
             "description": "Other LiveLabs you might like",
             "filename": "../../other-livelabs/other-livelabs.md"
         },
-        {
-            "title": "Get Started with Oracle Cloud",
-            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
-            "filename": "https://oracle-livelabs.github.io/common//labs/cloud-login/cloud-login.md"
-        },
-        {
-            "title": "Need Help?",
+             {
+            "title": "Oracle CloudWorld 2022 - Get Help",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common//labs/need-help/need-help-freetier.md"
+            "filename":"https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     
                 ]
