--- a/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
+++ b/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
@@ -4,13 +4,13 @@
     "tutorials": [
         {
             "title": "Introduction",
-            "description": "Introduction to the Python and Database scripting workshop.",
+            "description": ".NET Development with Oracle Autonomous Database Quick Start",
             "filename": "../../intro/intro.md"
         },
         {
             "title": "Get started",
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable).",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
         },
         {
             "title": "Lab 1: Provision Oracle Autonomous Database",
