--- a/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
@@ -5,14 +5,19 @@
                 "step2.md":"../../data-load/files/step2.md"},
     "variables": ["../../variables/variables.json",
                  "../../variables/variables-in-another-file.json"],
-    "help": "livelabs-help-**enterarea**_us@oracle.com",
+    "help": "livelabs-help-db_us@oracle.com",
     "tutorials": [
         {
             "title": "Introduction",
             "description": "Introduction for this workshop; provides a brief overview of what to expect.",
             "filename": "../../introduction/workshop-introduction.md"
         },
-             {
+        {
+            "title": "Get Started with Oracle Cloud",
+            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+            "filename": "https://oracle-livelabs.github.io/common//labs/cloud-login/cloud-login.md"
+        },
+        {
             "title": "Lab 1: Walk-through of Flask application and Oracle REST APIs",
             "description": "This Lab will open the Flask application and step through, while also discussing Oracle REST API capabilities",
             "filename": "../../lab-1-application-oracle-rest-api-walkthrough/application-oracle-rest-api-walkthrough.md"
@@ -23,7 +28,7 @@
             "filename": "../../lab-2-oracle-rest-api-deep-dive/oracle-rest-api-deep-dive.md"
         },
         {
-            "title": "Lab 3: Understanding the Python and Oracle REST API relationship",
+            "title": "Lab 3: Review the Python and Oracle REST API relationship",
             "description": "We review the Python application and its relationship with the provided Oracle REST APIs",
             "filename": "../../lab-3-python-and-oracle-rest-api-relationship/python-and-oracle-rest-api-relationship.md"
         },
@@ -41,11 +46,6 @@
             "title": "Other LiveLabs you might like",
             "description": "Other LiveLabs you might like",
             "filename": "../../other-livelabs/other-livelabs.md"
-        },
-        {
-            "title": "Get Started with Oracle Cloud",
-            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
-            "filename": "https://oracle-livelabs.github.io/common//labs/cloud-login/cloud-login.md"
         },
         {
             "title": "Need Help?",
